# rusty-neat

./: .gitignore  Cargo.toml  best.json  config.json  connect_four.json  next_steps.txt  test.json
benches/: evaluate_network.rs
core/: .gitignore  Cargo.toml
core/src/: activation.rs  gene_pool.rs  serialize.rs
gui/: pom.xml
rusty-neat-core/: Cargo.toml
rusty-neat-core/benches/: evaluate_network.rs
rusty-neat-core/src/: activation.rs  config_util.rs  gene_pool.rs  genome.rs  lib.rs  organism.rs  population.rs  reporter.rs  reproduction.rs  serialize.rs  species.rs
rusty-neat-gui/: Cargo.toml
rusty-neat-gui/src/: commands.rs  data.rs  delegate.rs  genome_widget.rs  main.rs  maybe.rs  reader.rs
rusty-neat-gui/src/component/: generation.rs  genome.rs  mod.rs  species.rs
rusty-neat-gui/src/model/: gene_pool.rs  generation.rs  genome.rs  mod.rs  neat.rs  organism.rs  result.rs  species.rs
rusty-neat-interchange/: Cargo.toml
rusty-neat-interchange/src/: gene_pool.rs  generation.rs  genome.rs  io.rs  lib.rs  neat_result.rs  organism.rs  species.rs
rusty-neat-pinball/: Cargo.toml
rusty-neat-pinball/src/: body.rs  main.rs  physics.rs
rusty-neat-pinball/src/display/: entity.rs  mod.rs
src/: config_util.rs  gene_pool.rs  genome.rs  lib.rs  organism.rs  population.rs  reproduction.rs  species.rs
xor_population/: result.json
