[package]
name = "rusty-neat"
version = "0.1.0"
authors = ["Florian Seligmann <floseligmann@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "evaluate_network"
harness = false