[package]
name = "rusty-neat-core"
version = "0.1.0"
authors = ["Florian Seligmann <floseligmann@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rand = "0.8.0"
rand_distr = "0.4.0"
itertools = "0.10.0"
rusty-neat-interchange = { path = "../rusty-neat-interchange" }


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "evaluate_network"
harness = false