[package]
name = "rusty-neat-gui"
version = "0.1.0"
authors = ["Florian Seligmann <floseligmann@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.7", features = ["im"]}
im = "15.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rusty-neat-interchange = { path = "../rusty-neat-interchange" }