[package]
name = "rusty-neat-pinball"
version = "0.1.0"
authors = ["Florian Seligmann <floseligmann@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = {version = "0.8.0", features = ["simd-stable"]}
nalgebra = {version = "0.26", features = ["mint"]}
ggez = "0.5"
mint = "0.5"
glam = {version = "0.15", features = ["mint"]}